# chess-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cell.rs  game.rs  main.rs
src/pieces/: mod.rs  pawn.rs
